# Thesis

./: .envrc  .gitignore  README.md  Thesis.code-workspace  acquire.py  aquire.py  arg_parser.py  argos.py  broadcast.sh  camera.py  cmd_parser.py  deploy.sh  deploy.txt  deploy_master.sh  deploy_rpi.sh  detect.py  detect_aligned.py  intel.py  pose.py  preprocessing.py  remove.txt  requirements.txt  setup.py  setup_master.py  setup_rpi.py  test.py  test2.py  test3.py  tf_test.py  torch_test.py  utils.py
ArUco/: analysis.py  aruco_calib.py
ViViT/: convert.py  evaluate.py  main.py  requirements.txt  test.py
YOLO/: detect.py  pose.py
argos/: __init__.py  __main__.py  argos.py  requirements.txt
argos/argos_common_env/argos_common/: pyproject.toml
argos/argos_common_env/argos_common/argos_common/: __init__.py  logger.py  parser.py  printer.py  rabbit.py  yaml_parser.py
argos/argos_node_env/argos_node/: pyproject.toml
argos/argos_node_env/argos_node/argos_node/: __main__.py  intel.py  namespace.py  network.py  producer.py  rabbit.py  realsense.py  server.py
argos/argos_node_env/argos_node/argos_node/controllers/: __init__.py  cameras.py
argos/argos_node_env/argos_node/argos_node/services/: acquire.py
argos_vue/: .env  README.md  package-lock.json  package.json  vue.config.js
bash/: .add_pi.sh  .forward_ipv4.sh  .reboot_cluster.sh  .shutdown_cluster.sh  argos_down.sh  argos_up.sh  install_node.sh
configs/: acquire.yaml  aquire.yaml  aquire_short.yaml  preprocess.yaml
helpers/: arg_parser.py  intel.py  utils.py
kinetics/: test.py  (+11 more)
kinetics-i3d/: .envrc
(+319 files in other folders)
