[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "argos-common"
version = "0.1.0"
description = "Common utilities for the ARGOS project"
authors = ["Bruno Cebola <bruno.m.cebola@gmail.com>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.9.2"
#Common dependencies
colorama = "^0.4.6"
