[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "argos-node"
version = "0.1.0"
description = "Node handler for the ARGOS project"
authors = ["Bruno Cebola <bruno.m.cebola@gmail.com>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.9.2"
#Common dependencies
jsonschema = "^4.22.0"
numpy = "^1.26.4"
opencv_python = "^4.9.0.80"
pika = "^1.3.2"
pyrealsense2 = "^2.55.1.6486"
python-dotenv = "^1.0.1"
PyYAML = "^6.0.1"
scikit_learn = "^1.4.2"
tqdm = "^4.66.4"
ultralytics = "^8.2.17"
waitress = "^3.0.0"
colorama = "^0.4.6"
Flask = "^3.0.3"
